<resources>

    <string name="delete_all">Delete All</string>
    <string name="app_name" translatable="false">BarkBuddy</string>
    <string name="no_dogs_available">No dogs to display</string>
    <string name="app_header">Dog Adoption</string>
    <string name="add_dog">Add Dog</string>
    <string name="delete_dog">Delete Dog</string>
    <string name="edit_dog">Edit Dog</string>
    <string name="dog_image">dog image</string>
    <string name="favorite_on">♥ Favorite</string>
    <string name="favorite_off">♡ Favorite</string>
    <string name="dog_name">Dog Name</string>
    <string name="dog_age">Dog Age (0-20)</string>
    <string name="dog_breed">Breed</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender_format">Gender: %1$s</string>
    <string name="dog_gender">Dog Gender</string>
    <string name="select_image">Select Image</string>
    <string name="save_dog">Save Dog</string>
    <string name="fill_all_fields">Please fill all fields.</string>
    <string name="adoption_process">Adoption Process</string>
    <string name="adoption_success">Dog adopted successfully!</string>
    <string name="years_old_format">%1$d years old</string>
    <string name="your_favorites">★ Your Favorite Dogs</string>
    <string name="dog_deleted">Dog removed</string>
    <string name="tab_all_dogs">All</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_history">History</string>
    <string name="history_title">Adoption History</string>
    <string name="adopter">Adopter</string>
    <string name="adopter_format">Adopter: %1$s %2$s</string>
    <string name="start_adoption_process">Start adoption process</string>
    <string name="Adopting">Adopting:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="terms">I agree to all terms</string>
    <string name="adopt">Adopt</string>
    <string name="adoption_terms">
    By agreeing to these terms, you commit to:\n\n
    • Providing a safe, loving, and permanent home for the dog.\n\n
    • Ensuring regular veterinary care, including vaccinations and checkups.\n\n
    • Complying with all local pet ownership laws and regulations.\n\n
    • Refraining from using the dog for any illegal or harmful purposes.\n\n
    • Contacting the adoption agency if you can no longer care for the dog.\n\n
    For complete details, contact our adoption agency.</string>
    <string name="agree_to_terms">Please agree to the adoption terms</string>
    <string name="adoption_terms_title">Adoption Terms</string>
    <string name="validation_error_title">Validation Error</string>
    <string name="validation_error_message">Missing or Invalid Fields</string>
    <string name="cancel">Cancel</string>
    <string name="agree">Agree</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="confirm_exit_info">Are you sure you want to go back?\n\n Any unsaved changes will be lost.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="missing_dog_ID">Missing dog ID</string>
    <string name="dog_not_found">Dog not found</string>
    <string name="enter_valid_email">Please enter a valid email address</string>
    <string name="enter_valid_phone">Please enter a valid phone number</string>
    <string name="sure_delete">Are you sure you want to delete %1$s?</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="sure_delete_all">Are you sure you want to delete all dogs?</string>
    <string name="alert">Alert</string>
    <string name="no_dogs">No dogs in the list - Nothing to delete.</string>
    <string name="stray_report_image">Stray dog report image</string>
    <string name="add_stray_report">Add stray dog report</string>
    <string name="stray_reports_list">List of stray dog reports</string>
    <string name="report_description">Report description</string>
    <string name="report_location">Location</string>
    <string name="submit_report">Submit report</string>
    <string name="error_fill_all_fields">Please fill in all fields</string>
    <string name="report_submitted">Report submitted successfully</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="menu_home">Home</string>
    <string name="menu_stray_reports">Stray Reports</string>
    <string name="add_donation">Add Donation</string>
    <string name="hint_donor_name">Donor name</string>
    <string name="choose_category">Choose category:</string>
    <string name="category_food">Food</string>
    <string name="category_toys">Toys</string>
    <string name="category_equipment">Equipment</string>
    <string name="hint_description">Description</string>
    <string name="save">Save</string>
    <string name="category_format">Category: %1$s</string>
    <string name="menu_donations">Donations</string>
    <string name="menu_about">About</string>
    <string name="all_categories">All</string>
    <string name="about_text">This app was created for a dog adoption shelter. You can view dogs, adopt, donate items, and help report stray dogs. Built with love by HIT students 🐾</string>

    <string name="team_members">Team Members</string>
    <string name="member1_name">Shira Ayal</string>
    <string name="member2_name">Raziel Otick</string>
    <string name="member3_name">Evyatar Tam</string>
    
    <string name="reportDateTime" translatable="false">19/06/2025 14:00"</string>
    <string name="Tel_Aviv">Tel Aviv</string>
    <string name="Donor_Name">Donor Name</string>
    <string name="Donor_Category">Category</string>
    <string name="Donor_Description">Description</string>
    <string name="Donor_Date" translatable="false">2025-06-19</string>
    <string name="no_donations">No donations in the list - Nothing to delete.</string>

    <string name="menu_strays">Stray Reports</string>
    <string name="no_stray_reports">No stray dogs in the list - Nothing to delete.</string>

    <string name="random_fact">Random Fact</string>
    <string name="ok">OK</string>
    <string name="api_error_message">API error</string>

    <string-array name="local_dog_facts">
        <item>Dogs have three eyelids.</item>
        <item>A Greyhound can beat a Cheetah in a long-distance race.</item>
        <item>Dalmatians are born completely white.</item>
        <item>Dogs can learn more than 1000 words.</item>
        <item>A dog’s sense of smell is at least 40x better than ours.</item>
    </string-array>

    <string name="donation_title">Support Our Dogs 🐾</string>
    <string name="stray_reports_title">See a Lost Dog? Let Us Know! 🐶</string>

    <string-array name="random_dog_names">
        <item>Max</item>
        <item>Bella</item>
        <item>Charlie</item>
        <item>Luna</item>
        <item>Cooper</item>
        <item>Daisy</item>
        <item>Rocky</item>
        <item>Sadie</item>
        <item>Duke</item>
        <item>Molly</item>
        <item>Buddy</item>
        <item>Bailey</item>
        <item>Ruby</item>
        <item>Milo</item>
        <item>Zoe</item>
        <item>Bear</item>
        <item>Chloe</item>
        <item>Tucker</item>
        <item>Stella</item>
        <item>Leo</item>
        <item>Rosie</item>
        <item>Finn</item>
        <item>Lily</item>
        <item>Scout</item>
        <item>Olive</item>
        <item>Jasper</item>
        <item>Willow</item>
        <item>Zeus</item>
        <item>Penny</item>
        <item>Murphy</item>
        <item>Nala</item>
        <item>Winston</item>
        <item>Maple</item>
        <item>Odin</item>
        <item>Ginger</item>
        <item>Thor</item>
        <item>Abby</item>
        <item>Hank</item>
        <item>Roxy</item>
        <item>Moose</item>
        <item>Pepper</item>
        <item>Shadow</item>
        <item>Hazel</item>
        <item>Diesel</item>
        <item>Remi</item>
        <item>Juno</item>
        <item>Marley</item>
        <item>Cleo</item>
        <item>Ace</item>
        <item>Poppy</item>
    </string-array>
</resources>