<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="4dp"
    android:layout_margin="20dp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/stray_report_image"
            android:background="@drawable/ic_launcher_background"
            android:clickable="true"
            android:focusable="true"
            tools:src="@drawable/barkbuddy_icon_foreground" />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/report_description"
            android:inputType="textMultiLine"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/report_location" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/submit_report"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:padding="8dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>

